schema/testdata/validation_permission_attribute_action_as_actiontype_arg/schema.keel
model Person {
    operations {
        get getPerson(id)
    }

    @permission(expression: true, actions:[getPerson])
}
