schema/testdata/errors/permission_attribute_invalid_actiontype_arg.keel
model Person {
    actions {
        get getPerson(id)
    }

    @permission(
        expression: true,
        //expect-error:24:28:AttributeArgumentError:true is not a valid action type
        actions: [get, true]
    )
}
